Fixed bag with dark mode
у меня был баг, когда я переключал темы. Сам переход был разный. То есть при нажатии на смены темы я видел, что элементы некоторые позднее переходят. Это резало глаза, но дело был в том, что у некоторых из них сзади цвет был прозрачный, а у не которых не было цвета, а после перехода появлялся. Надо было просто задать цвета всем светлые, а при переходе на dark mode темные

--- a/src/components/addTask/AddTask.scss
+++ b/src/components/addTask/AddTask.scss
@@ -67,7 +67,7 @@
 	&__form {
 		display: flex;
 		flex-direction: column;
-		background-color: transparent;
+		background-color: white;
 		padding: 20px;
 		border-radius: 8px;
 		border: 1px solid rgba(0, 0, 0, 0.1);
