--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -219,8 +219,12 @@ body.dark {
 	.task-item,
 	.icon,
 	.container__input input {
-		background-color: #1e1e1e;
 		border-color: #2f2f2f;
+	}
+
+	.task-item,
+	.container__input input {
+		background-color: #1e1e1e;
 	}
 
 	.task-header {
